// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`my-complex-prop should render 1`] = `
<my-complex-prop>
  <mock:shadow-root>
    <div class="values">
      <div class="values__item">
        <span>
          AAA
        </span>
      </div>
      <div class="values__item">
        <span>
          BBB
        </span>
      </div>
      <div class="values__item">
        <span>
          CCC
        </span>
      </div>
    </div>
  </mock:shadow-root>
</my-complex-prop>
`;

exports[`my-complex-prop should render with data 1`] = `
<my-complex-prop>
  <mock:shadow-root>
    <div class="values">
      <div class="values__item">
        <span>
          LEANDRO
        </span>
      </div>
      <div class="values__item">
        <span>
          MANCINI
        </span>
      </div>
    </div>
  </mock:shadow-root>
</my-complex-prop>
`;
